[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/map/planet_details.gd" type="Script" id=1]
[ext_resource path="res://assets/planets/krypton_6.png" type="Texture" id=2]

[node name="PlanetDetails" type="Panel"]
margin_top = 560.0
margin_right = 360.0
margin_bottom = 700.0
grow_vertical = 0
rect_min_size = Vector2( 0, 140 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlanetImageTextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 117.0
margin_bottom = 140.0
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 121.0
margin_right = 238.0
margin_bottom = 140.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/CenterContainer"]
margin_left = 13.0
margin_top = 25.0
margin_right = 103.0
margin_bottom = 115.0

[node name="PlanetNameLabel" type="Label" parent="HBoxContainer/Panel/CenterContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Planet name"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="LevelLabel" type="Label" parent="HBoxContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 90.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Level 2"
align = 1

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 90.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="DistancesLabel" type="Label" parent="HBoxContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "123 ly"
align = 1

[node name="TravelButton" type="Button" parent="HBoxContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 90.0
margin_bottom = 90.0
text = "Travel"

[node name="DescriptionContainer" type="Control" parent="HBoxContainer"]
margin_left = 242.0
margin_right = 360.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DescriptionContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/DescriptionContainer/MarginContainer"]
margin_right = 110.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Planet description"
valign = 1
autowrap = true

[connection signal="pressed" from="HBoxContainer/Panel/CenterContainer/VBoxContainer/TravelButton" to="." method="_on_Button_pressed"]
